<resources>
    <string name="app_name">ComfortZone</string>
    <string name="navigation_drawer_open">Open Nav Drawer</string>
    <string name="navigation_drawer_close">Close Nav Drawer</string>
    <!-- all -->
    <string name="all_app_version">ComfortZone v1.0.0.1x</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <string name="all_group_channels">Buddies</string>
    <string name="all_open_channels">Therapy Groups</string>

    <!-- main -->
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">ComfortZone</string>
    <string name="settings">Settings</string>
    <string name="blocked_members_list">Blocked members</string>

    <!-- login -->
    <string name="login_user_name">     User Name</string>
    <string name="login_user_nickname">     Nickname</string>
    <string name="login_connect">Login</string>
    <string name="login_disconnect">Logout</string>
    <string name="login_password">      Password</string>

    <!-- SOS page -->
    <string name="sos_heading">Emergency Contact Details</string>
    <string name="name">Name</string>
    <string name="number">Contact Number</string>

    <!-- signup -->
    <string name="signup_user_name">        User Name</string>
    <string name="signup_user_nickname">        Nickname</string>
    <string name="signup_connect">Sign up</string>
    <string name="signup_disconnect">Logout</string>


    <!-- Open Channel List -->
    <string name="open_channel_list_participant_count">%1$d users online</string>

    <string name="create_open_channel">Create Therapy Group</string>
    <string name="participant_list">Participants</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Add Buddies</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <string name="user_typing">%s is typing</string>
    <string name="two_users_typing">%s and %s are typing</string>
    <string name="users_typing"> Multiple users are typing</string>

    <string name="member_info"></string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Start chatting!</string>

    <!-- calendar -->
    <string name="current_date">February, 2020</string>
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="last_date">30</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About Page-->
    <string name="terms_of_use_details1">
    <b>Welcome to ComfortZone! </b>\n\nThese Terms of Use govern your use of\nComfortZone and provide information about the ComfortZone Service, outlined below.
    When you create a ComfortZone account or use ComfortZone you agree to these terms.\n\n
    <b>The ComfortZone Service</b>\n\n
    <li><b>Offering personalized opportunities to create, connect, communicate, discover, and share.</b>\n
    People are different. We want to strengthen your relationships through shared experiences you actually care about. So we build systems that try to understand who and what you and others care about,
        and use that information to help you create, find, join, and share in experiences that matter to you.</li>\n\n

    <li><b>Fostering a positive, inclusive, and safe environment.</b>\n
    We develop and use tools and offer resources to our community members that help to make their experiences positive and inclusive,
        including when we think they might need help. We also have teams and systems that work to combat abuse and violations of our Terms and policies,
        as well as harmful and deceptive behavior. We use all the information we have-including your information-to try to keep our platform secure.
    </li>\n\n

    <li><b>Research and innovation.</b>\n
    We use the information we have to study our Service and collaborate with others on research to make our Service better and contribute to the well-being of our community.</li>\n\n\n\n

    <b>Updating These Terms </b>\n\n
    We may change our Service and policies, and we may need to make changes to these Terms so that they accurately reflect our Service and policies. Unless otherwise required by law,
    we will notify you (for example, through our Service) before we make changes to these Terms and give you an opportunity to review them before they go into effect.
    Then, if you continue to use the Service, you will be bound by the updated Terms.
    If you do not want to agree to these or any updated Terms, you can delete your account.\n\n


</string>
    <string name="tou_hea">Terms Of Use</string>

    <!-- About Page-->


</resources>
