<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    tools:context=".main.LoginActivity">

    <TextView
        android:id="@+id/text_login_versions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="28dp"

        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/all_app_version"
        android:textColor="#a0a0a0"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:layout_gravity="center_horizontal"
            android:text="LOGIN"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/unlock_animation" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_login_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="15dp"
                android:hint="@string/login_user_name"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_login_user_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:hint="@string/login_password"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_connect"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/button"
            android:stateListAnimator="@null"
            android:text="@string/login_connect"
            app:theme="@style/AppTheme.ButtonStyle"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="Dont have an Account?  Signup"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="13dp"
            android:textStyle="bold" />



    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
